--- a/server/public/assets/scripts/styles.css
+++ b/server/public/assets/scripts/styles.css
@@ -1,6 +1,22 @@
+.numPad{
+  width: 170px;
+  border: 1px solid black;
+  margin:0 auto;
+}
+
+.operatorPad{
+  width: 170px;
+  border: 1px solid black;
+  margin:0 auto;
+}
+
 .btn{
-  width:30px;
+  width:50px;
   margin:3px;
   text-align:center;
-  border-radius: 15px;
+  border-radius: 25px;
+  position: relative;
+}
+.btn0{
+  left:55px;
 }
