Added CSS Styling

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -8,8 +8,15 @@
   <script type="text/javascript" src="/vendors/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
   <body>
+      <h1>Calculator Application</h1>
       <div class="container">
+          <div class="display">
+
+          </div>
           <div class="calculator">
+
+          </div>
+          <div class="results">
 
           </div>
       </div>
