--- a/server/public/assets/scripts/styles.css
+++ b/server/public/assets/scripts/styles.css
@@ -1,22 +1,85 @@
-.numPad{
-  width: 170px;
-  border: 1px solid black;
+
+@font-face{
+ font-family:'digital-clock-font';
+ src: url('put_the_location_to_your_font.ttf or .otf');
+
+}
+body{
+  background-color:#C5E8F8;
+  font-family:'digital-clock-font' Arial sans-serif;
+}
+
+h1{
+  text-align: center;
+}
+
+.container{
   margin:0 auto;
+}
+
+.calculator{
+  width:335px;
+  height:400px;
+  margin: 0 auto;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 10px 10px 5px #888888;
+  background-color: #1C5485;
+  padding:5px;
+}
+
+.display{
+  margin: 0 auto;
+  text-align:center;
+  align: right;
+  font-size: 24px;
+}
+
+.equalDiv{
+  margin: 0 auto;
+  width: 310px;
+  text-align: center;
+}
+
+.numPad{
+  width: 240px;
+  display:inline-block;
+  margin: auto;
 }
 
 .operatorPad{
-  width: 170px;
-  border: 1px solid black;
+  width: 80px;
+  display:inline-block;
   margin:0 auto;
+  vertical-align:top;
+}
+
+.results{
+  clear: both;
+  margin: 20px auto;
+  text-align: center;
+  font-size:24px;
 }
 
 .btn{
-  width:50px;
+  width:70px;
+  height: 70px;
   margin:3px;
   text-align:center;
-  border-radius: 25px;
+  border-radius: 35px;
   position: relative;
+  font-size: 30px;
+  box-shadow: 10px 10px 5px #888888;
 }
+
+.reset{
+  width:100px;
+  margin-left:20px;
+}
+.clear{
+  width:100px;
+}
+
 .btn0{
-  left:55px;
+  left:75px;
 }
